# extended-wer-normalizer

./: README.md  main.py  pyproject.toml
.github/workflows/: ci.yml
src/extended_wer_normalizer/: __init__.py  transforms.py
src/extended_wer_normalizer/languages/: __init__.py  de.py  en.py  fr.py
tests/: test_normalization.py
