[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/extended_wer_normalizer"]

[project]
name = "extended-wer-normalizer"
version = "0.2.0"
description = "jiwer-compatible WER normalizer with number, email, URL, filler, and symbol normalization for voice AI evaluation"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["wer", "speech recognition", "asr", "normalization", "jiwer", "voice ai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
]
dependencies = [
    "jiwer>=3.0",
    "num2words>=0.5",
]

[project.urls]
Homepage = "https://github.com/ai-coustics/extended-wer-normalizer"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
